[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprites/menu/level/button_bg_normal.png" type="Texture" id=1]
[ext_resource path="res://sprites/menu/level/button_bg_hover.png" type="Texture" id=2]
[ext_resource path="res://sprites/menu/level/button_bg_pressed.png" type="Texture" id=3]
[ext_resource path="res://assets/PixelGuzel.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scenes and scripts/menu/level_button.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 27
font_data = ExtResource( 4 )

[node name="level" type="TextureButton"]
margin_right = 50.0
margin_bottom = 50.0
keep_pressed_outside = true
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 2 )
script = ExtResource( 5 )

[node name="text_display" type="Label" parent="."]
margin_left = 20.0
margin_top = 13.0
margin_right = 35.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 1 )
text = "1"

[connection signal="mouse_entered" from="." to="." method="_on_level_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_level_mouse_exited"]
